# post-scoring

./: .env.example  .gitignore  README.md  docker-compose.yml
nginx/: nginx.conf
src_django/: .env.example  Dockerfile  entrypoint.sh  health_check.sh  pyproject.toml
src_django/apps/blog/: admin.py  apps.py  models.py  urls.py
src_django/apps/blog/migrations/: 0001_initial.py
src_django/apps/blog/serializers/: generic.py
src_django/apps/blog/services/: post_score.py
src_django/apps/blog/views/: generic.py
src_django/apps/user/: admin.py  apps.py  models.py  urls.py
src_django/apps/user/management/commands/: create_default_admin_user.py
src_django/apps/user/migrations/: 0001_initial.py
src_django/apps/user/serializers/: generic.py
src_django/apps/user/tests/: factories.py  test_user.py
src_django/apps/user/views/: generic.py
src_django/main_app/: asgi.py  settings.py  urls.py  wsgi.py
src_django/seedwork/: admin.py  cache.py  exceptions.py  models.py  pagination.py  services.py  swagger.py  utils.py  views.py
